--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ frontend_url=${FRONTEND_URL}
 spring.datasource.url=${MYSQL_URL}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
