--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,33 @@
 # Application Name
 spring.application.name=trading-journal
 
-# Dynamic port for Railway
+# Dynamic port (Render provides PORT automatically)
 server.port=${PORT:8080}
 
-# Frontend URL (for CORS or links)
+# Frontend URL (for CORS)
 frontend_url=${FRONTEND_URL}
 
-# MySQL Database (use Railway environment variables)
-spring.datasource.url=${MYSQL_URL}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+# --- Database (Neon/Postgres via Render env vars) ---
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-# Hibernate / JPA
+# --- Hibernate / JPA ---
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Cloudinary (keep secrets in env variables)
-cloudinary.cloud-name=${CLOUDINARY_NAME}
-cloudinary.api-key=${CLOUDINARY_KEY}
-cloudinary.api-secret=${CLOUDINARY_SECRET}
+# --- Cloudinary ---
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
 
-# File Upload Limits
+# --- File Upload Limits ---
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
-# JWT (secret & expiration)
+# --- JWT ---
 jwt.secret=${JWT_SECRET}
-jwt.expirationMs=${JWT_EXPIRATION_MS:864000000}  # 10 days
+jwt.expirationMs=${JWT_EXPIRATION_MS:864000000}  # default 10 days
