--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.servlet.multipart.max-request-size=5MB
 
 # --- JWT ---
 jwt.secret=${JWT_SECRET}
-jwt.expirationMs=${JWT_EXPIRATION_MS:864000000}  # default 10 days
+jwt.expirationMs=${JWT_EXPIRATION_MS:864000000}
